Atualizando classes bootstrap

--- a/src/index.html
+++ b/src/index.html
@@ -47,7 +47,7 @@
         </div>
         <div class="row">
             <div class="col-xs-12 col-sm-6 col-md-4">
-                <div class="thumbnail">
+                <div class="img-thumbnail">
                     <img src="" alt="">
                     <div class="caption">
                         <h3>titulo do trabalho</h3>
@@ -57,7 +57,7 @@
                 </div>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-4">
-                <div class="thumbnail">
+                <div class="img-thumbnail">
                     <img src="" alt="">
                     <div class="caption">
                         <h3>titulo do trabalho</h3>
@@ -67,7 +67,7 @@
                 </div>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-4">
-                <div class="thumbnail">
+                <div class="img-thumbnail">
                     <img src="" alt="">
                     <div class="caption">
                         <h3>titulo do trabalho</h3>
@@ -77,7 +77,7 @@
                 </div>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-4">
-                <div class="thumbnail">
+                <div class="img-thumbnail">
                     <img src="" alt="">
                     <div class="caption">
                         <h3>titulo do trabalho</h3>
@@ -87,7 +87,7 @@
                 </div>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-4">
-                <div class="thumbnail">
+                <div class="img-thumbnail">
                     <img src="" alt="">
                     <div class="caption">
                         <h3>titulo do trabalho</h3>
@@ -97,7 +97,7 @@
                 </div>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-4">
-                <div class="thumbnail">
+                <div class="img-thumbnail">
                     <img src="" alt="">
                     <div class="caption">
                         <h3>titulo do trabalho</h3>
