Correção de versão e modo de instalação do sass

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 
     <!-- Estilos -->
     <link rel="stylesheet" href="components/bootstrap/css/bootstrap.min.css">
-
+    <link rel="stylesheet" href="src">
     <!-- Scripts -->
     <script src="components/bootstrap/js/bootstrap.min.js"> </script>
     <script src="components/jquery/jquery.min.js"></script>
@@ -33,7 +33,7 @@
     </nav>
     <div class="jumbotron">
         imagem animada
-        <div class="container">
+        <div class="container header-animado">
             <p>Olá, tudo bem?</p>
             <p>Eu sou Vitor Couto, front-ender e amante de café</p>
         </div>
