--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 
     <!-- Estilos -->
     <link rel="stylesheet" href="components/bootstrap/css/bootstrap.min.css">
-    
+    <link rel="stylesheet" href="css/main.css">
     <!-- Scripts -->
     <script src="components/bootstrap/js/bootstrap.min.js"> </script>
     <script src="components/jquery/jquery.min.js"></script>
@@ -31,9 +31,9 @@
         
         </div>
     </nav>
-    <div class="jumbotron">
+    <div class="jumbotron header-animado">
         imagem animada
-        <div class="container header-animado">
+        <div class="container ">
             <p>Olá, tudo bem?</p>
             <p>Eu sou Vitor Couto, front-ender e amante de café</p>
         </div>
