--- a/src/index.html
+++ b/src/index.html
@@ -39,17 +39,20 @@
         </div>
     </nav>
     <div class="jumbotron header-animado">
-        imagem animada
+        
         <div class="container ">
-            <p>Olá, tudo bem?</p>
-            <p>Eu sou Vitor Couto, front-ender e amante de café</p>
+            <p class="header-animado__title">Olá, tudo bem?</p>
+            <h1 class="header-animado__subtitle">Eu sou Vitor Couto, front-ender e amante de café</h1>
         </div>
+
+        <div class="header-animado__ilustra"></div>
+
     </div>
     
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <h1>Últimos Trabalhos</h1>
+                <h2>Últimos Trabalhos</h2>
             </div>
         </div>
         <div class="row">
