--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,13 @@
             <h1 class="header-animado__subtitle">Eu sou Vitor Couto, front-ender e amante de café</h1>
         </div>
 
-        <div class="header-animado__ilustra"></div>
+        <div class="header-animado__ilustra">
+            <div class="nuvens"></div>
+            <div class="rua"></div>
+            <div class="casas"></div>
+            <div class="carrosCima"></div>
+            <div class="carrosBaixo"></div>
+        </div>
 
     </div>
     
