--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="components/font-awesome/css/font-awesome.css">
     <link rel="stylesheet" href="css/main.css">
     <!-- Scripts -->
+    
     <script src="components/bootstrap/js/bootstrap.min.js"> </script>
     <script src="components/jquery/jquery.min.js"></script>
     <script src="components/popper.js/popper.min.js"></script>
@@ -184,13 +185,14 @@
         <div class="container">
             <p class="text-right">Social:</p>
             <ul class="list-inline text-right rodape__list">
-                <li class="list-inline-item rodape__listItem"><a href="#" class=" btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a></li>
-                <li class="list-inline-item rodape__listItem"><a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a></li>
-                <li class="list-inline-item rodape__listItem"><a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-github"></i></a></li>
-                <li class="list-inline-item rodape__listItem"><a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-youtube"></i></a></li>
-                <li class="list-inline-item rodape__listItem"><a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-instagram"></i></a></li>
+                <li class="list-inline-item rodape__listItem"><a href="#" class=" btn-social "><i class="fa fa-fw fa-facebook"></i></a></li>
+                <li class="list-inline-item rodape__listItem"><a href="#" class="btn-social "><i class="fa fa-fw fa-twitter"></i></a></li>
+                <li class="list-inline-item rodape__listItem"><a href="#" class="btn-social "><i class="fa fa-fw fa-github"></i></a></li>
+                <li class="list-inline-item rodape__listItem"><a href="#" class="btn-social "><i class="fa fa-fw fa-instagram"></i></a></li>
             </ul>
         </div>
     </footer>
+<script src="js/main.js"></script>
+<script src="js/menu.js"></script>
 </body>
 </html>
