Finalização do menu

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
                 <img src="imagens/logo.svg" alt="Logo">
             </a>
         
-            <button class="header-nav__hamburgger" type="button">
+            <button aria-controls="mainMenu" class="header-nav__hamburgger" type="button" aria-expanded="false">
                 <div class="header-nav__hamburggerParties">
                     <span class="sr-only">Menu</span>
                     <i class="fa fa-bars"></i>
@@ -31,7 +31,7 @@
                 </div>
             </button>
 
-            <ul class="header-nav__menu">
+            <ul class="header-nav__menu" aria-expanded="false">
                 <li><a href="#">Portifólio</a></li>
                 <li><a href="#">Sobre mim</a></li>
                 <li><a href="#">Contato</a></li>
